--- a/src/Views/Home/About.cshtml
+++ b/src/Views/Home/About.cshtml
@@ -2,6 +2,9 @@
     ViewData["Title"] = "About";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+<h3>Google Classroom Bulk Grader</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>
+    This app is can be used to post grades to all assignments made in
+    Google Classroom by the same Google project (i.e. same ClientId).
+</p>
