--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -30,9 +30,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -41,7 +39,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - gcbulkgrader</p>
+            <p>&copy; 2018 - andyfmiller.com</p>
         </footer>
     </div>
 
