--- a/src/Views/Home/SelectCourse.cshtml
+++ b/src/Views/Home/SelectCourse.cshtml
@@ -22,7 +22,7 @@
     </div>
 
     <div class="form-group vertical-spacing">
-        <button id="submit" type="submit" class="btn btn-primary disabled" disabled="disabled">Next</button>
+        <button id="submit" type="submit" class="btn btn-info disabled" disabled="disabled">Next</button>
     </div>
 }
 
