--- a/src/Views/Home/BulkGrade.cshtml
+++ b/src/Views/Home/BulkGrade.cshtml
@@ -11,12 +11,13 @@
 @using (Html.BeginForm("BulkGrade", "Home", FormMethod.Post))
 {
     @Html.HiddenFor(m => m.UserId)
+    @Html.HiddenFor(m => m.PersonImage)
     @Html.HiddenFor(m => m.PersonName)
     @Html.HiddenFor(m => m.CourseId)
     @Html.HiddenFor(m => m.CourseName)
 
     <div class="form-group">
-        <button id="submit" type="submit" class="btn btn-info">Save</button>
+        <button id="submit" type="submit" class="btn btn-info" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> Saving">Save</button>
     </div>
 
     <div class="form-group">
@@ -66,4 +67,14 @@
             </tbody>
         </table>
     </div>
+}
+
+@section Scripts
+{
+    <script>
+        $('.btn').on('click', function() {
+            var $this = $(this);
+            $this.button('loading');
+        });
+    </script>
 }
