--- a/src/Views/Home/SelectCourse.cshtml
+++ b/src/Views/Home/SelectCourse.cshtml
@@ -2,26 +2,31 @@
 
 @{
     ViewBag.Title = "Select a Course";
+    ViewBag.PersonImage = Model.PersonImage;
     ViewBag.PersonName = Model.PersonName;
     Layout = "_Layout";
 }
 
 <h2>@ViewBag.Title</h2>
 
-@using (Html.BeginForm("BulkGrade", "Home", FormMethod.Get))
+@using (Html.BeginForm())
 {
+    @Html.HiddenFor(m => m.PersonImage)
     @Html.HiddenFor(m => m.PersonName)
     @Html.HiddenFor(m => m.UserId)
+    @for (var i = 0; i < Model.Courses.Count; i++)
+    {
+        @Html.HiddenFor(m => m.Courses[i].CourseId)
+        @Html.HiddenFor(m => m.Courses[i].CourseName)
+    }
 
-    <div class="form-group vertical-spacing">
-        @Html.DropDownList("courseId", Model.Courses, "Choose course", new
-        {
-            classs = "form-control",
-            onChange = "toggleSubmit()"
-        })
+    <div class="form-group">
+        <select asp-for="CourseId" asp-items="@(new SelectList(Model.Courses, "CourseId", "CourseName"))" class="form-control" onchange="toggleSubmit()">
+            <option value="">Choose course</option>
+        </select>
     </div>
 
-    <div class="form-group vertical-spacing">
+    <div class="form-group">
         <button id="submit" type="submit" class="btn btn-info disabled" disabled="disabled">Next</button>
     </div>
 }
