Add a few words of encouragement.

--- a/src/Views/Home/Index.cshtml
+++ b/src/Views/Home/Index.cshtml
@@ -5,8 +5,17 @@
 <h3>Google Classroom Bulk Grader</h3>
 
 <p>
+    Have you ever wanted to quickly setup a Google Classroom course
+    with a bunch of grades so it looks realistic for demos?
+</p>
+
+<p>
+    Well then, this app is for you!
+</p>
+
+<p>
     This app is can be used to post grades to all assignments made in
-    Google Classroom by the same Google project (i.e. same ClientId).
+    Google Classroom by your Google project (i.e. same ClientId).
 </p>
 
 <p>
